<resources>
    <string name="app_name">Popular People</string>
    <string name="personName">Name</string>
    <string name="personPopularity">Popularity</string>
    <string name="knownFor">Known For</string>
    <string name="imageTransition">imageTransition</string>
    <string name="storagePermission">storage permission required to save image!</string>
    <string name="app_internet_error">please make sure there is internet connection</string>
    <string name="changeAction">android.net.conn.CONNECTIVITY_CHANGE</string>
    <string name="bio">Bio</string>
    <string name="department">Department</string>
    <string name="birthDay">BirthDay</string>
    <string name="gender">Gender</string>
    <string name="topRated">Top Rated</string>
    <string name="error">general error msg!!</string>
    <string name="retry">retry</string>
    <string name="errorDialogMessage">something went wrong</string>
    <string name="something_went_wrong">some thing went wrong</string>
    <string name="cancel">cancel</string>
    <string name="iconWarning" translatable="false">&#xe007;</string>

</resources>
